--- a/src/css/category.css
+++ b/src/css/category.css
@@ -18,7 +18,7 @@
   height: 75px;
   background: #060010;
   left: 0;
-  top: 50px;
+  top: 0;
   display: none;
 }
 
@@ -52,7 +52,7 @@
   content: '';
   position: fixed;
   left: 0;
-  top: 114px;
+  top: 64px;
   z-index: -1;
   width: 100%;
   height: 50px;
@@ -72,7 +72,7 @@
   max-width: 1080px;
   margin: 0 auto;
   position: relative;
-  padding: 9.25rem 0 6em 0;
+  padding: 6.25rem 0 6em 0;
   min-height: 100vh;
 }
 
@@ -451,12 +451,12 @@ div:has(> .props-table) {
 @media only screen and (max-width: 967px) {
   .main-nav {
     padding: 0 1em;
-    top: 40px;
+    top: 0;
     display: block;
   }
 
   .main-nav .nav-items::after {
-    top: 105px;
+    top: 65px;
   }
 
   .category-wrapper {
@@ -467,7 +467,7 @@ div:has(> .props-table) {
 
   .category-page {
     width: 100%;
-    padding: 9em 0 0;
+    padding: 6em 0 0;
   }
 
   .category-page .sub-category.docs-category-title {
@@ -480,7 +480,7 @@ div:has(> .props-table) {
   /* Hide right panel on small screens */
   .right-panel {
     display: none;
-    padding: 8.5rem 1em 0;
+    padding: 6.5rem 1em 0;
   }
 
   .category-page .main-category {
@@ -598,15 +598,15 @@ div:has(> .props-table) {
 
 @media only screen and (max-width: 480px) {
   .main-nav {
-    top: 36px;
+    top: 0;
   }
 
   .main-nav .nav-items::after {
-    top: 101px;
+    top: 65px;
   }
 
   .category-page {
-    padding: 8rem 1em 0;
+    padding: 6rem 1em 0;
   }
 
   .scroll-stack-card-demo {
